pylintrc is added and mypy is disabled.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,6 +47,6 @@ repos:
     hooks:
     - id: pylint
       name: pylint
-      entry: pylint
+      entry: pylint --rcfile=.pylintrc
       language: system
       types: [python]
